--- a/source/templates/quote.html
+++ b/source/templates/quote.html
@@ -67,7 +67,7 @@
                                                                 #
                                                             </p>
                                                             <p class="whitespace-nowrap font-bold text-main text-right">
-                                                                3894</p>
+                                                                {{ folio }}</p>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -217,7 +217,9 @@
 
                     <!-- Botón de impresión -->
                     <div class="w-100 d-flex align-items-center justify-content-center">
-                        <a id="no-print" onclick="hide_no_print(); window.print(); unhide_no_print();" class="btn"
+                        <a id="no-print" onclick="hide_no_print(); window.print(); setTimeout(() => {
+                            unhide_no_print();
+                        }, 10000);" class="btn"
                             style="background-color: #5cc4b3; color: white;">Imprimir</a>
                         <a id="no-print-two" href="{{ url_for('index') }}" class="btn btn-primary ml-2">Regresar</a>
                     </div>
@@ -241,7 +243,9 @@
                     tableta.</p>
                 <p class="card-text">Si lo prefieres, siempre puedes imprimir el contenido para verlo en su tamaño
                     original.</p>
-                <a onclick="low_print(); window.print(); hide();" class="btn"
+                <a onclick="low_print(); window.print(); setTimeout(() => {
+                    hide();
+                }, 10000);" class="btn"
                     style="background-color: #5cc4b3; color: white;">Imprimir</a>
             </div>
         </div>
